<resources>
    <string name="app_name">Marvel Sample App</string>

    <!-- Errors -->
    <string name="exception_message_no_connection">Error trying to connect to the server. Check your network connection status</string>
    <string name="exception_message_generic">There was an application error</string>
    <string name="close_button">Close</string>
    <string name="dialog_no_internet_connection">There is no internet connection. You can check the Ranking offline</string>

    <!-- Home feature -->
    <string name="title_fragment_home">Home</string>
    <string name="search_button">Search Marvel characters</string>
    <string name="arena_button">Arena</string>
    <string name="ranking_button">Ranking</string>

    <!-- List/Search feature -->
    <string name="search_hint">Search for Marvel characters</string>
    <string name="no_items">No items</string>
    <string name="title_fragment_detail">Character profile</string>
    <string name="title_fragment_list">Marvel characters</string>
    <string name="select_two_characters_button">Select two characters</string>
    <string name="go_to_arena_button">Go to Arena</string>
    <string name="select_characters_title">Select characters</string>
    <string name="search_characters_title">Search characters</string>
    <string name="character_detail_title">Character profile</string>

    <!-- Arena feature -->
    <string name="title_fragment_arena">Arena</string>
    <string name="select_characters">Select characters</string>
    <string name="fight_button">Fight</string>
    <string name="go_to_ranking_button">Show ranking</string>
    <string name="winner_label">Winner</string>
    <string name="tie_message">Tie</string>
    <string name="arena_title">Arena</string>
    <string name="arena_ranking_title">Ranking</string>
</resources>
