<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="me.miguelos.sample.presentation.ui.home.HomeFragment"
        android:label="@string/title_fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_charactersFragment"
            app:destination="@id/charactersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_arenaFragment"
            app:destination="@id/arenaFragment" />
    </fragment>

    <fragment
        android:id="@+id/charactersFragment"
        android:name="me.miguelos.sample.presentation.ui.characters.CharactersFragment"
        android:label="@string/title_fragment_list"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_charactersFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/characterDetailFragment"
        android:name="me.miguelos.sample.presentation.ui.characterdetail.CharacterDetailFragment"
        android:label="@string/title_fragment_detail"
        tools:layout="@layout/fragment_character_detail" />

    <fragment
        android:id="@+id/arenaFragment"
        android:name="me.miguelos.sample.presentation.ui.arena.ArenaFragment"
        android:label="@string/title_fragment_arena"
        tools:layout="@layout/fragment_arena">
        <action
            android:id="@+id/action_arenaFragment_to_charactersFragment"
            app:destination="@id/charactersFragment" />
        <action
            android:id="@+id/action_arenaFragment_to_charactersRankingFragment"
            app:destination="@id/charactersFragment"
            app:popUpTo="@+id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>
